tests/NormalTests/paczka1/fuzzy1/53619781.err
Error in line 2: A789 A943 76,2
Error in line 5: A789 S717 35,1
Error in line 6: ss24JD4 A943 96,5
Error in line 13: TZHj A943 18,8
Error in line 15: TZHj A789 84,7
Error in line 10: wWe A789 77,1
Error in line 21: wWe S717 66,2
Error in line 29: wWe S482 55,7
Error in line 38: ss24JD4 ¨482 322,0
